# ChangeLog for media-tv/freevo
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-tv/freevo/ChangeLog,v 1.60 2008/10/25 15:39:53 rbu Exp $

*freevo-1.8.2 (25 Oct 2008)

  25 Oct 2008; Robert Buchholz <rbu@gentoo.org>
  +files/freevo-1.8.2-mplayerargs.patch, +files/freevo-1.8.2.boot,
  -files/freevo.rc6, metadata.xml, -freevo-1.5.4.ebuild,
  -freevo-1.7.3.ebuild, -freevo-1.7.4.ebuild, +freevo-1.8.2.ebuild:
  Version bump (bug #217542), a lot of upstream changes, cleanup old stuff.
  Downstream changes:
   * USE flag restructuring, add xine use flag (bug #226181 by alpiturchi)
   * Change freevoboot script so it works with slim (patch by Kai Dietrich)

  01 May 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  freevo-1.7.6.1.ebuild:
  ppc stable, bug #218647

  27 Apr 2008; Markus Meier <maekke@gentoo.org> freevo-1.7.6.1.ebuild:
  x86 stable, bug #218647

  20 Apr 2008; Robert Buchholz <rbu@gentoo.org> freevo-1.7.6.1.ebuild:
  amd64 stable, bug 218647

*freevo-1.7.6.1 (14 Mar 2008)

  14 Mar 2008; Robert Buchholz <rbu@gentoo.org> +freevo-1.7.6.1.ebuild:
  Version bump, for upstream changes see bug #203550.
  
  Introduce new gphoto2 use flag for the photo plugin, thanks to kroemmelbein
  and alpiturchi. Do not install tvtime if USE=ivtv is set, thanks to George
  Kibardin. QA improvements, thanks Donnie Berkholz for reviews.

*freevo-1.7.4 (01 Dec 2007)

  01 Dec 2007; Robert Buchholz <rbu@gentoo.org> -freevo-1.5.4-r2.ebuild,
  -freevo-1.6.0.ebuild, -freevo-1.6.1.ebuild, +freevo-1.7.4.ebuild:
  Version bump (bug #199580), changes include:
  * Lots of translation updates
  * New plug-ins: DVB, eject, fxd, internet tv, lastfm, mplayer aspect,
    podcast, youtube
  * Lots of updates and bugfixes
  * Fix for bug #163052 (twisted-2.5 breaks recordserver)

  27 Nov 2007; Matthias Schwarzott <zzam@gentoo.org> freevo-1.5.4.ebuild,
  freevo-1.5.4-r2.ebuild, freevo-1.6.0.ebuild, freevo-1.6.1.ebuild,