@@ -1,6 +1,9 @@
 # ChangeLog for media-tv/freevo
-# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-tv/freevo/ChangeLog,v 1.60 2008/10/25 15:39:53 rbu Exp $
+# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-tv/freevo/ChangeLog,v 1.61 2009/01/09 06:39:13 patrick Exp $
+
+  09 Jan 2009; Patrick Lauer <patrick@gentoo.org> -freevo-1.7.2.ebuild:
+  Remove old
 
 *freevo-1.8.2 (25 Oct 2008)
 
